# esp_idf_hal_template

./: .gitmodules  Cargo.toml
.cargo/: config.toml
src/: main.rs
