[workspace]
members = [".", "ws2812-spi-rs"]

[package]
name = "esp_idf_hal_template"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.dev>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "esp_idf_hal_template"
harness = false               # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", features = [
  "native",
  "binstart",
  "std",
  "alloc",
], default-features = false }
anyhow = "1.0.86"
ws2812-spi = { path = "./ws2812-spi-rs", features = ["mosi_idle_high"] }
smart-leds = "0.4.0"
embedded-hal = "1.0.0"
heapless = "0.8.0"
embedded-cli = "0.2.1"
embedded-io = { version = "0.6.1", features = ["std"] }
embedded-io-adapters = { version = "0.6.1", features = ["std"] }
rand = "0.9.0-alpha.2"
ufmt = "0.2.0"
ssd1315 = "0.2.1"
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Necessary until a new version of `esp-idf-sys` is released

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
